--- a/package.json
+++ b/package.json
@@ -54,14 +54,14 @@
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.3.1",
-		"typescript": "^4.7.2"
-	},
-	"type": "module",
-	"dependencies": {
+		"typescript": "^4.7.2",
+		"@iconify/icons-mdi-light": "^1.2.1",
+		"@iconify/svelte": "^2.2.1",
 		"@sveltejs/adapter-node": "^1.0.0-next.78",
 		"sass": "^1.52.3",
 		"svelte-windicss-preprocess": "^4.2.8",
 		"tailwind-accent-color": "^1.0.2",
 		"vite-plugin-windicss": "^1.8.4"
-	}
+	},
+	"type": "module"
 }
